Support API v0.2 + ClientCredentials security source
